# docs/swagger.json
@@ -147,15 +147,6 @@
                         "schema": {
                             "$ref": "#/definitions/models.ProductRequest"
                         }
-                    },
-                    {
-                        "description": "Base64 encoded image data",
-                        "name": "image_data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
                     }
                 ],
                 "responses": {
@@ -200,6 +191,35 @@
                         "type": "string",
                         "description": "Image URL",
                         "name": "image_url",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.ProductResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/products/item-based": {
+            "get": {
+                "description": "Retrieve products based on item-based collaborative filtering",
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Get item-based recommendations",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Product Id",
+                        "name": "product_id",
                         "in": "query",
                         "required": true
                     }
@@ -1637,11 +1657,13 @@
             "type": "string",
             "enum": [
                 "submitted",
+                "submittedRevitalized",
                 "revitalized",
                 "sold"
             ],
             "x-enum-varnames": [
                 "Submitted",
+                "SubmittedRevitalized",
                 "Revitalized",
                 "Sold"
             ]
